// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit form is invalid 1`] = `
<DocumentFragment>
  .cache-1xu2kb7-StyledBox-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #45d6b5;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-1xu2kb7-StyledBox-StyledButton:hover,
.cache-1xu2kb7-StyledBox-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xu2kb7-StyledBox-StyledButton:hover,
.cache-1xu2kb7-StyledBox-StyledButton:focus {
  color: #fff;
  background-color: #30d1ad;
}

.cache-1xu2kb7-StyledBox-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="true"
      class="em6gco80 cache-1xu2kb7-StyledBox-StyledButton e7ah3bn0"
      disabled=""
      type="submit"
    >
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit form is submitting 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1xu2kb7-StyledBox-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #45d6b5;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-1xu2kb7-StyledBox-StyledButton:hover,
.cache-1xu2kb7-StyledBox-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xu2kb7-StyledBox-StyledButton:hover,
.cache-1xu2kb7-StyledBox-StyledButton:focus {
  color: #fff;
  background-color: #30d1ad;
}

.cache-1xu2kb7-StyledBox-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-chj27i-StyledProgressbar-StyledProgressbar-StyledProgressbar {
  height: 1em;
  width: 1em;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="true"
      class="em6gco80 cache-1xu2kb7-StyledBox-StyledButton e7ah3bn0"
      disabled=""
      type="submit"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="CircularProgressbar  cache-chj27i-StyledProgressbar-StyledProgressbar-StyledProgressbar e7dhm9i0"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: transparent; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
            fill-opacity="0"
            stroke-width="16"
            style="stroke: currentColor; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly  1`] = `
<DocumentFragment>
  .cache-6wwsys-StyledBox-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #45d6b5;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-6wwsys-StyledBox-StyledButton:hover,
.cache-6wwsys-StyledBox-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6wwsys-StyledBox-StyledButton:hover,
.cache-6wwsys-StyledBox-StyledButton:focus {
  color: #fff;
  background-color: #30d1ad;
}

.cache-6wwsys-StyledBox-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="false"
      class="em6gco80 cache-6wwsys-StyledBox-StyledButton e7ah3bn0"
      type="submit"
    >
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;
